update iimages and copy

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,7 @@
 /** Showcase **/
 /** Blog **/
-/* Utilities */
-/* GitHub */
+/** Utilities **/
+/** GitHub **/
 /** Footer **/
 
 /** Showcase **/
