--- a/css/blog.css
+++ b/css/blog.css
@@ -122,7 +122,7 @@
   padding: 20px;
 }
 
-.blog-content {
+.blog-container p {
   margin-top: 0;
   margin-bottom: 2rem;
   font-size: 18px;
@@ -179,6 +179,10 @@
 
 .bold-font {
   font-weight: bolder;
+}
+
+.italics {
+  font-style: italic;
 }
 
 .z-1 {
