--- a/css/blog.css
+++ b/css/blog.css
@@ -122,6 +122,26 @@
   padding: 20px;
 }
 
+.blog-container h2 {
+  font-size: 30px;
+  margin: 1rem 0;
+}
+
+.blog-container h3 {
+  font-size: 25px;
+  margin: 1rem 0;
+}
+
+.blog-container h4 {
+  font-size: 21px;
+  margin: 1rem 0;
+}
+
+.blog-container h5 {
+  font-size: 19px;
+  margin: 1rem 0;
+}
+
 .blog-container p {
   margin-top: 0;
   margin-bottom: 2rem;
@@ -145,6 +165,7 @@
 
 .blog-toc {
   font-size: 18px;
+  margin-bottom: 2rem;
 }
 
 .blog-toc li {
